--- a/CPU/Hash/Dockerfile
+++ b/CPU/Hash/Dockerfile
@@ -4,4 +4,4 @@ ADD repeat_hash.py /
 ADD test-data.html /
 ADD hash_crypto.py /
 
-CMD [ "python", "/hash_crypto.py" ]
+CMD [ "python", "/hash_crypto.py", "&&", "python", "./repeat_hash.py"]
